finish active voice section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/concise/03.md
+++ b/courses/concise/03.md
@@ -38,6 +38,8 @@ Statement A and B use passive voice. Statement C and D uses active voice! Think 
 
 :::
 
+Using active voice rather than passive voice can make writing more direct and concise. Active voice eliminates the need for some prepositional phrases, removes extra wording for passive voice verb conjugations, and gives the reader a quicker understanding of the concept because of the direct language.
+
 ## 2 How to Write in Active Voice
 
 ### 2.1 Identify the Subject and Verb 
@@ -46,19 +48,18 @@ The subject of the sentence should be the one performing the action (verb). If t
 ### 2.2 Use Direct Language
 Active voice uses direct language, which can make your writing clearer and more concise. Instead of saying `The function was implemented by the programmer,` say `The programmer implemented the function.`
 
-### 2.3 Rephrase Sentences
+### 2.3 Start with the Subject
 If you find you've written a sentence in the passive voice, try to rephrase it. For example, `The code was reviewed by the team` can be rephrased to `The team reviewed the code.`
 
 ### 2.4 Avoid "by" Phrases
-Passive voice often includes phrases that start with `by.` If you see this in your writing, it might be a sign that you're using passive voice.
-
-In the example: `The server was rebooted by the system administrator.`, the sentence is written in passive voice and could be rewritten to `The system administrator rebooted the server.`
+Passive voice often includes phrases that start with `by.` If you see this in your writing, it might be a sign that you're using passive voice. In the example: `The server was rebooted by the system administrator.`, the sentence is written in passive voice and could be rewritten to `The system administrator rebooted the server.`
 
 ### 2.5 Use Active Voice in Software Instructions
 When writing instructions or procedures, use the active voice to directly address the reader. For example, instead of writing `The file should be saved,` write `Save the file.`
 
 ### 2.6 Use a Passive Voice Checker
-There are online tools and features in word processing software that can help identify passive voice in your writing. Use these tools to help you spot and correct passive sentences.
+There are online tools like [this one](https://sapling.ai/utilities/passive_checker) and features in word processing software that can help identify passive voice in your writing. Use these tools to help you spot and correct passive sentences. 
+
 
 ::: info Should I always use active voice?
 Remember, while it's generally recommended to use active voice in technical writing, there are instances where passive voice may be necessary or even preferred, such as when the focus is on the action being done rather than who is doing it.
@@ -83,4 +84,32 @@ For example:
 | ---- | ---- |
 | This application has been developed to do X.  | This application does X. |
 
+:::
+
+## 4 Practice!
+
+
+1. A new version of the software was released last week.
+2. The code was debugged before the meeting.
+3. The software was developed by the team.
+4. The bug has been fixed by the engineer.
+5. The system was checked for vulnerabilities.
+6. The bug was identified by the quality assurance analyst.
+7. The software has been updated by the developer.
+
+
+::: details Example Options
+| Passive Voice Sentence | Active Voice Sentence |
+| ---------------------- | --------------------- |
+| A new version of the software was released last week. | The company released a new version of the software last week. |
+| The code was debugged before the meeting. | The team debugged the code before the meeting. |
+| The software was developed by the team. | The team developed the software. |
+| The bug has been fixed by the engineer. | The engineer fixed the bug. |
+| The system was checked for vulnerabilities. | The cybersecurity team checked the system for vulnerabilities. |
+| The bug was identified by the quality assurance analyst. | The quality assurance analyst identified the bug. |
+| The software has been updated by the developer. | The developer updated the software. 
+:::
+
+::: tip REMEMBER
+Rewriting passive sentences is not always the best option. It is up to you to determine if it makes the content more clear, direct, and effective in your context.
 :::
