finish Keep it short section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/concise/04.md
+++ b/courses/concise/04.md
@@ -5,19 +5,73 @@ author: Emily
 headerDepth: 3
 ---
 
-## 1. First, write something down
+## 1 Why Keep it Short?
 
-This section encourages engineers to get their thoughts down, however messy, because for many, deleting words is easier than creating them. Start with a stream of conscienceness, bullet points, or any way that gets the ideas written down.
+Academic studies showed that professionals battle competing priorities and lack of time when trying to learn something new in the workplace (Lohman 2009, Lohman 2005). Even YouTube instroduced "YouTube shorts" to appeal to consumers with short content. Shorter content can peak or keep participant attention and cater to busy individuals with competing priorities. Consider these factors when writing your content. Remember that you can create supplemental content or communication methods, but that writing short, necessary content will create the largest impact for the participant's time.
+
+## 2 How to Keep it Short
+
+### 2.1 Write Something Down
+
+Get your thoughts down, however messy, because for many, deleting words is easier than creating them. Start with a stream of conscienceness, bullet points, or any way that gets the ideas written down.
 
 ::: tip Partner Up
 One strategy can be to speak your thoughts out loud while another person records your thoughts. If this is helpful, but you don't have a partner, you can try recording yourself and then writing it while you listen to allow for the thoughts to flow.
 :::
 
-## 2. Then, delete words
+### 2.2 Delete Words
 
-Once the thoughts are there, remove redundancy and reword thoughts to keep the writing short, concise, and clear.
+Once the thoughts are there, remove redundancy and reword ideas to keep the writing short, concise, and clear. Reference the [Word Choice Section](../concise/02.html#_2-choose-meaningful-words) to see information on eliminating unvaluable words.
 
-## 3. Organize in chunks
+Redundancy can exist at the word, sentence, or paragraph level. For example:
 
-Review the writing to make sentences short and paragraphs short.
+| Sentence with redundancy | Sentence without redundancy |
+| --- | --- |
+| I just wanted to inform you that we tested the software and found that the tests we did resulted in no failures. | We tested the software and found no failures. |
+| The first step is to create a GitHub account. You must have a GitHub account before continuing. | The first step is to create a GitHub account. |
 
+
+### 2.3 Keep Sentences Short
+
+Identify runon sentences, sentences with more than one idea, or very long sentences. Separate these sentences into multiple, shorter sentences, each with one idea. When the following example words and punctuation are used in the middle of a sentence, that may indicate an opportunity to create multiple, shorter sentences: `therefore`, `however`, `;`, `-`.
+
+::: code-tabs
+
+@tab Original
+```
+Local authentication is the minimal and lowest level of authentication; it is accomplished via username and password.
+```
+
+@tab Improved
+```
+The application requires a form of authentication. Local authentication is the simplest method avilable for authentication. It requires a username and password. 
+```
+:::
+
+::: note BUT WAIT - the improvement got longer!
+
+This original example, found on an open-source GitHub project wiki page, has multiple ideas in the same sentence and is unclear to the reader. We broke the sentence into three, shorter sentences to make each thought distinct and understandble. This required more written real estate, but gave the reader more information in fewer words considering the reader was otherwise left wondering about the meaning or relying on more documentation for understanding.
+
+:::
+
+
+
+### 2.4 Organize in Chunks
+
+Review the writing keep paragraphs short and organize them into logical ideas. As an example, notice how this training content section is broken down into short section of ideas to include:
+
+- Write Something Down
+- Delete Words
+- Keep Sentences Short
+- Organize in Chunks
+
+## 3 Put it in Practice!
+
+Review the following example to remove redundancies, shorten sentences, and make ideas more clear!
+
+"Firstly, the software application must be installed by the user on their computer. Once the software application has been installed by the user on their computer, the user must then proceed to open the software application. After the software application has been opened by the user, the user must then input their login credentials into the software application. Once the user has input their login credentials into the software application, they will then have access to all the features of the software application."
+
+::: details One Solution
+"First, install the software on your computer. After installation, open the application and input your login credentials. Once logged in, you will have access to all the software features."
+The revised paragraph is more direct, concise, and easier to understand. It eliminates the redundant phrases. It also uses active voice for a more engaging tone. Reference [the Active Voice Section](./03.md) for more.
+:::
