add background section for complete section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/complete/02.md
+++ b/courses/complete/02.md
@@ -1,6 +1,13 @@
 ---
 index: 2
-title: 2. Using Examples
+title: 2. Use Complete Examples
 author: Emily
 headerDepth: 3
 ---
+
+Define the problem and establish the objective.
+These are your boundaries. Stay within these boundaries.
+
+Describe the necessary steps from start to end required to achieve the objective.
+
+There are bodies that give standards and examples - IEEE, etc.
