add to the intros and section outline
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/SoftwareDocumentation/03.md
+++ b/courses/SoftwareDocumentation/03.md
@@ -32,11 +32,10 @@ the participants were accuracy, simplicity, readability, completeness, brevity, 
 a need for a high-level view (Sumita et al., 2007)
 
 We will take these values and break them down in sections to learn more. Feel free to 
-learn from the sections in the order that works for you, and practice your skills at the 
-end of each section and at combine all skills for a final, cummulative practice.
+learn from the sections in the order that works for you, and practice throughout the sections and at the end.
 
 The sections are:
 - [Be Concise](../concise/README.md)
-- [Be Complete]((../complete/README.md))
-- [Be Accurate]((../accurate/README.md))
-- [Be Big Picture]((../big-picture/README.md))
+- [Be Complete](../complete/README.md)
+- [Be Accurate](../accurate/README.md)
+- [Be Big Picture](../big-picture/README.md)
