--- a/courses/complete/02.md
+++ b/courses/complete/02.md
@@ -1,9 +1,18 @@
 ---
 index: 2
-title: 2. Use Complete Examples
+title: 2. Identify the Scope
 author: Emily
 headerDepth: 3
 ---
+
+## 1 What is the Scope?
+Depending on the type of documentation you are writing and the type of audience that will read it, your scope may look very different. For example, a comment in the code will have a limited audience, probably only to include developers, and a limited scope, probably only to include one or a few lines of code to describe. However, an application README file may have a diverse audience including software developers, testers, application users, and more. The scope may include application description, installation instructions, features, example usage, and even perhaps documentation for development and code contributions.
+
+## 2 How Can I Identify the Scope?
+
+## 3 Put it in Practice!
+
+Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
 
 Define the problem and establish the objective.
 These are your boundaries. Stay within these boundaries.
