--- a/courses/accurate/04.md
+++ b/courses/accurate/04.md
@@ -1,6 +1,35 @@
 ---
 index: 4
-title: 4. 
+title: 4. Test Your Documentation
 author: Emily
 headerDepth: 3
 ---
+
+## 1. Test your documentation
+
+Whether for readability, grammar, or accuracte instructions, reviewing, reading, and testing the documentation by putting yourself in the shoes of the typical reader, you may find inaccuracies. 
+
+### Example
+"Despite the the fact that the software update was supposed to improve functionality, many users reported experiencing glitches."
+
+::: info
+Read the example sentence above. Do you see any issues?
+:::
+
+::: details Read it again!
+Did you catch the repeated word, "the"? It is common that our eyes and minds may skip over mistakes, especially when we are the author of some written content. This includes mistakes like repeated words, grammar issues, or incorrect or omitted technical information.
+:::
+
+### Check your work
+
+Always read what you write. You may need to go through several iterations before feeling satisfied with the quality. Just like the common practice of code reviews on software teams, consider having another person read your writing to give feedback that may be more difficult for you to catch. 
+
+Strategies for documentation review:
+- Read paragraphs backwards, one sentence at a time, to change the flow and potentially catch errors.
+- Have a colleague, user, or other individual read the documentation and provide feedback. It is best to have a representative of the target audience do so to make sure the language is understandable for the audience.
+- Take action. If you are writing instructions or any documentation that describes actions like application functionality, download instructions, etc, read the instructions and do the action to test that the information is accurate.
+
+::: note Useful Tools
+Online tools exist that can identify words used more than once. For example, [this online text tool](https://onlinetexttools.com/find-duplicate-text-words) is one of many ways you can test your own documentation to start to find duplicate words - whether simply repeated as errors or whether to make your documentation simpler as discussed in [the Be Concise section](../concise/03.md). You could even write your own software script to help you with your documentation!
+Also, many times Markdown files or other software files used for documentation do not have built-in checks for written grammar, such as misspellings and duplicate words due to software code not obliging by the same grammar rules. When writing written sentences, consider copying the content into a text editor that does have these features like Word, Google Docs, or others, to identify grammar mistakes before returning to the code copy.
+:::
