--- a/courses/big-picture/02.md
+++ b/courses/big-picture/02.md
@@ -1,6 +1,11 @@
 ---
 index: 2
-title: 2. Diagrams
+title: 2. Give Context
 author: Emily
 headerDepth: 3
 ---
+
+- Objective
+- Big Picture View
+- Importance
+- Stakeholders
