add identify the scope section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/complete/02.md
+++ b/courses/complete/02.md
@@ -10,13 +10,36 @@ Depending on the type of documentation you are writing and the type of audience 
 
 ## 2 How Can I Identify the Scope?
 
+### 2.1 Identify the "Who"
+Identify the audience of the software documentation. Who will be reading what you write?
+
+Take note of the target audience's technical knowledge and what information they will need to understand effectively. 
+
+### 2.2 Identify the "Why"
+Identify the purpose of the documentation. For example, a user guide's purpose is to provide step-by-step instruction to the user of some software, whereas a "man page" would show the functionality and features of some software. 
+
+### 2.3 Use Your Knowledge
+What do you know based on your role and stake in this software that people may need to know? What features are noteworthy or what steps may cause challenges or confusion?
+
+::: tip REMEMBER
+Competeness does not mean to write everything possible about a topic. Rather, it means that the content serves the full purpose for the target audience that it should. This can be done using concise wording as we discussed in the introduction. Providing too much information when it is not necessary or meeting the purpose for the audience will create confusion and frustration.
+:::
+
 ## 3 Put it in Practice!
 
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+Consider the following example. Who is the target audience for this documentation? What is the purpose of this documentation?"
 
-Define the problem and establish the objective.
-These are your boundaries. Stay within these boundaries.
+**Once the system boots up, you'll be greeted with the main interface. Here, you can create a new project by clicking on the 'New Project' button located at the top left corner of the screen. A dialog box will appear, prompting you to name your project and choose a location to save it. After filling in the necessary details, click 'Create' to start your project. You can add new elements to your project by dragging and dropping them from the 'Elements' panel on the right side of the screen...'**
 
-Describe the necessary steps from start to end required to achieve the objective.
+::: details Suggested Answers
 
-There are bodies that give standards and examples - IEEE, etc.
+The target audience for this documentation is likely to be end-users of the software, possibly with a basic to intermediate level of technical knowledge. The language used is straightforward and the instructions are detailed, suggesting it's meant for people who are using the software to create projects.
+
+The purpose of this documentation is to guide users on how to use the software, specifically on how to create a new project and add elements to it. It's a form of user manual or guide, aimed at helping users understand and navigate the software's interface and features.
+
+:::
+
+
+::: note The Benefits of Completeness
+Completeness pays off. For example, users with complete and effective documentation may be happier with their experience and provide less need for support calls. 
+:::
