--- a/courses/complete/03.md
+++ b/courses/complete/03.md
@@ -6,3 +6,10 @@ headerDepth: 3
 ---
 
 Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+
+Define the problem and establish the objective.
+These are your boundaries. Stay within these boundaries.
+
+Describe the necessary steps from start to end required to achieve the objective.
+
+There are bodies that give standards and examples - IEEE, etc.
