add use complete examples section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/complete/03.md
+++ b/courses/complete/03.md
@@ -5,11 +5,72 @@ author: Emily
 headerDepth: 3
 ---
 
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+## 1 When To Use Examples
 
-Define the problem and establish the objective.
-These are your boundaries. Stay within these boundaries.
+Depending on the scope of the documentation you learned to identify in [the 2. Identify the Scope](./02.md), examples may be needed for your documentation to be most effective. Types of software documentation that may aid from examples include, but are not limited to:
+- User Manuals
+- API Documentation
+- Tutorials
+- Knowledge Based Articles
+- Troubleshooting Guides
+- Software Design Documents
+- Technical Specifications
 
-Describe the necessary steps from start to end required to achieve the objective.
+When in doubt on whether or not to include examples in your content, consider the following questions:
+- Is my documentation describing an action? If so, you may want to include and example of that action.
+- Is my audience familiar with the context of my content? Is not, that may be extra motivation to include an example.
 
-There are bodies that give standards and examples - IEEE, etc.
+## 2 How to Use Complete Examples
+
+### 2.1 Understand the audience and scope
+As discussed earlier, identifying the audience and scope is key to determining the need for examples. This also gives context to how descriptive or complex the examples should be to meet the needs.
+
+### 2.2 Be Specific
+Examples should clearly demonstrate the idea, showing exactly how something is used. If there is more than one way to accomplish something that you are conveying with an example, consider adding descriptions to discuss the different options or creating multiple examples to show all relevant uses.
+
+### 2.3 Use Concise Examples
+Just like we learned about in the [Be Concise Section](../concise/), readers may be overwhelmed or confused when given information that is not relevant or useful. Only include required information to convey your point. One example of this is when writing installation instructions. A command may provide a large amount of output and then result in a success or failure message. When providing an example of the command and possible output, there is no need to include every line of output because the user may only need to know the command to run and then what the success and failure results messages look like. You can use ellipses (`...`) when ommitting irrelevant information.
+
+For example, I may explain the way to download the node dependencies to build this training content locally and show the following:
+
+```sh
+npm install
+. . .
+added 630 packages, and audited 631 packages in 7s
+
+126 packages are looking for funding
+  run `npm fund` for details
+
+found 0 vulnerabilities
+```
+
+### 2.4 Use Realistic Scenarios
+
+Examples should be realistic! Show situations that the user will actually experience. This will make it relatable and understandable.
+
+::: note Use this training as an example!
+This training content uses examples throughout the sections to show you, the participant, what the ideas look like in practice. Use this content as an example for using examples!
+:::
+
+### 2.5 Include Necessary Context
+
+Make sure the reader has all the information they need to understand the example. This might include explaining the problem the example solves, or any prerequisites needed to understand the example.
+
+## 3 Put it in Practice!
+
+Determine what elements are complete or incomplete from the following examples:
+
+
+#### Example 1
+To list all files in a directory, use the `ls` command.
+
+#### Example 2
+To list all files in a directory, open your command line interface. Navigate to the directory you're interested in using the `cd` command. For example, if you want to navigate to a directory named 'Documents', you would type `cd Documents` and press Enter. Once you're in the desired directory, type `ls` and press Enter. You will see a list of all files and subdirectories in the current directory.
+
+::: details Suggested Answer
+The first example is incomplete. It tells the user to use the `ls` command to list all files in a directory, but it doesn't provide any context or further instructions. It assumes the user already knows how to open the command line interface and navigate to the desired directory.
+
+The second example is complete. It provides step-by-step instructions, starting from opening the command line interface. It explains how to navigate to the desired directory using the cd command, and then how to list all files using the ls command. This example provides all the information a user needs to list all files in a directory using this command line tool.
+
+Remember, this is dependent on the audience and the scope. If the audience is familiar with the running commands on the command line, the first may be sufficient if just given some additional context.
+:::
