--- a/courses/complete/04.md
+++ b/courses/complete/04.md
@@ -10,3 +10,12 @@ headerDepth: 3
 ## 2 How to Not Skip Steps
 
 ## 3 Put it in Practice!
+
+Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+
+Define the problem and establish the objective.
+These are your boundaries. Stay within these boundaries.
+
+Describe the necessary steps from start to end required to achieve the objective.
+
+There are bodies that give standards and examples - IEEE, etc.
