add last section of be complete
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/complete/04.md
+++ b/courses/complete/04.md
@@ -5,17 +5,58 @@ author: Emily
 headerDepth: 3
 ---
 
-## 1 What are the steps?
+## 1 Writing Steps for Instructions
+When writing instructions for something, it is essential not to skip steps. This can happen because the writer may be much more familiar with the process than the reader and forget to include things that are common knowledge to the writer and not the reader. For example, a software developer of an application may be intimately aware of how to use an application given that he or she may have been involved in the requirements, development, and testing. This may lead the developer to skip steps when writing documentation for readers from a different background.
+
+::: tip Test Your Documentation
+Reference the [Be Accurate Section](../accurate/04.md) for tips on testing your own documentation.
+:::
 
 ## 2 How to Not Skip Steps
 
+### 2.1 Write while you do
+One way to not skip steps is to write the instructions as you do them, stopping after every instruction to record the necessary information in documentation. Remember to include output or results to actions when possible. For example, after running the `docker ps` command, you should see two containers running:
+```sh
+CONTAINER ID   IMAGE          COMMAND                  CREATED          STATUS          PORTS     NAMES
+c114494b9812   redhat/ubi8    "/bin/bash"              38 minutes ago   Up 38 minutes             redhat8
+944568b8768c   nginx:latest   "/docker-entrypoint.…"   38 minutes ago   Up 38 minutes   80/tcp    nginx
+```
+
+### 2.2 Include the "unhappy path"
+Many people refer to the "happy path" as the steps, process, or sequence that occurs with no errors. For example, when describing login instructions to a website, you may tell the user to navigate to a particular link, enter their username, enter their password, and click "Login" to enter the website and accomplish the next step. This is the "happy path" where nothing went wrong. However, what happens if that user forgets their password, or enters an incorrect username? What happens if the user tried to sign in but has never created an account on the website? It is important to create documentation steps that address errors or sequences outside the "happy path".
+
+Another example is if I run `docker ps` and instead of seeing two running docker containers, I see:
+```sh
+Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docker daemon running?
+```
+The writer may not have run into this path, but making sure the docker daemon is running before being able to run a docker command is theoretically a necessary step. However, it is a step that may not appear for the writer because they may use docker often and already have it running. Whereas a reader may be doing this for the first time and run into this problem without context of what is happening or what to do about it. Including information about these possible results can help readers complete the steps effectively and independently, especially when they run into issues.
+
+### 2.3 Link to extra information
+There may be a variety in your documentation target audience background. Link to other areas, whether written by you or others, to explain steps that most may know but a few may need more information about. For example, when writing instructions on how to build this training content locally, I included links to GitHub's documentation about how to clone a repository after instructing users to clone the repository, I did not need to reinvent what GitHub wrote, nor did I need to include that for all users, but linking to it gave the option.
+
+You can view the instructions for running this training content locally on [this wiki page](https://github.com/em-c-rod/sw-doc-training/wiki/How-to-Run-the-Application).
+
 ## 3 Put it in Practice!
 
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+Rather than a software example, consider a common task you do without thinking, like brushing your teeth. This is routine and something you may do even half asleep! What if you had to teach someone how to brush their teeth that may be familiar with the idea, but never have done so before? What would you write for the steps?
 
-Define the problem and establish the objective.
-These are your boundaries. Stay within these boundaries.
+::: details Suggested Instructions
+The following instructions describe how to brush your teeth so that you can keep your teeth clean and healthy.
+1. First, make sure you have a toothbrush and toothpaste. There are many available types, and you can choose whatever you wish, but here is an example of each that you can buy at a grocery or pharmacy for less than $5 total. [Colgate at Walmart](https://www.walmart.com/ip/Colgate-Cavity-Protection-Toothpaste-with-Fluoride-Minty-Great-Regular-Flavor-6-Oz-Tube/49714957?wmlspartner=wlpa&selectedSellerId=0&wl13=375&adid=2222222227749714957_117755028669_12420145346&wmlspartner=wmtlabs&wl0=&wl1=g&wl2=c&wl3=501107745824&wl4=pla-2290367806927&wl5=9012716&wl6=&wl7=&wl8=&wl9=pla&wl10=8175035&wl11=local&wl12=49714957&wl13=375&veh=sem_LIA&gclsrc=aw.ds&&adid=2222222223749714957_117755028669_12420145346&wl0=&wl1=g&wl2=c&wl3=501107745824&wl4=pla-2290367806927&wl5=9012716&wl6=&wl7=&wl8=&wl9=pla&wl10=8175035&wl11=local&wl12=49714957&veh=sem&gad_source=1&gclid=Cj0KCQiA4NWrBhD-ARIsAFCKwWuXUyVe6jBpamoPM_pR0LY6wzLTU0oBMYDjXn7BJWhH3V_j7mKnI-waAgAJEALw_wcB) and [Toothbrush at Walmart](https://www.walmart.com/ip/Colgate-Extra-Clean-Full-Head-Toothbrush-Soft-4-Count/170080721?athbdg=L1102&from=/search). If purchasing new, remove from the packaging before use.
+2. Remove the toothpaste cap by unscrewing the cap counterclockwise until it detaches from the tube.
+3. Optionally rinse the toothbrush in running water.
+4. Squeeze the toothpaste onto the toothbrush bristles to prepare for teeth cleaning.
+5. Return the toothpaste cap on the tube by screwing it clockwise back onto the tube. Alternatively, you can do this step after brushing, just remember to put the cap back on the tube so the toothpaste does not dry out from longer air exposure and no longer serve its purpose for teeth cleaning.
+6. Taking the brush's handle in one hand, put the toothbrush bristles with toothpaste in your mouth and move across the teeth to remove food, plaque, and germs with the cleaning toothbrush bristles and paste.
+7. After brushing all teeth on all sides with the toothbrush bristles, which should take about 2 minutes when done thoroughly, spit out residing paste from one's mouth into a sink or similar disposal and rinse the toothbrush.
+8. Store the toothpaste and toothbrush for future use.
+:::
 
-Describe the necessary steps from start to end required to achieve the objective.
+::: note
+How were your instructions compared to our example? Did you forget any steps that we may have included? Did you include any steps we may have forgotten? Did you notice how we used some of the techniques? We gave some examples of toothpastes and toothbrushes, linking to more information if people did not have that. We added information about removing the packaging since that may not be in the "happy path" of a typical process when someone already has toothpaste and a toothbrush. We also have context to the steps to describe the reason for certain actions to give the reader more understanding and ability while following the directions.
 
-There are bodies that give standards and examples - IEEE, etc.
+Remember the audience when writing instructions. Most people would understand if you gave them only the instruction to go brush their teeth. However, this exercise puts into perspective how different it may feel for the reader than the writer regarding steps for software documentation.
+:::
+
+
+
