--- a/courses/big-picture/03.md
+++ b/courses/big-picture/03.md
@@ -4,3 +4,12 @@ title: 3. Use Diagrams
 author: Emily
 headerDepth: 3
 ---
+
+Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+
+Define the problem and establish the objective.
+These are your boundaries. Stay within these boundaries.
+
+Describe the necessary steps from start to end required to achieve the objective.
+
+There are bodies that give standards and examples - IEEE, etc.
