--- a/courses/accurate/04.md
+++ b/courses/accurate/04.md
@@ -5,7 +5,7 @@ author: Emily
 headerDepth: 3
 ---
 
-## 1. Test your documentation
+## 1 Test your documentation
 
 Whether for readability, grammar, or accuracte instructions, reviewing, reading, and testing the documentation by putting yourself in the shoes of the typical reader, you may find inaccuracies. 
 
@@ -33,3 +33,6 @@ Strategies for documentation review:
 Online tools exist that can identify words used more than once. For example, [this online text tool](https://onlinetexttools.com/find-duplicate-text-words) is one of many ways you can test your own documentation to start to find duplicate words - whether simply repeated as errors or whether to make your documentation simpler as discussed in [the Be Concise section](../concise/03.md). You could even write your own software script to help you with your documentation!
 Also, many times Markdown files or other software files used for documentation do not have built-in checks for written grammar, such as misspellings and duplicate words due to software code not obliging by the same grammar rules. When writing written sentences, consider copying the content into a text editor that does have these features like Word, Google Docs, or others, to identify grammar mistakes before returning to the code copy.
 :::
+
+### Be detail oriented
+The little things do matter. When reviewing and testing your documentation, pay attention to the little details to make sure content is consistent and accurate.
