add references for correct grammar
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/accurate/03.md
+++ b/courses/accurate/03.md
@@ -5,4 +5,45 @@ author: Emily
 headerDepth: 3
 ---
 
-1. Consistent verb tense!
+## 1 Grammar Importance
+Writing with correct grammar and no typos is important to convey accurate, reputable information. Remember that many software platforms do not have the built-in grammar checking that text editors do, therefore, making grammar mistakes can be easy to do.
+
+A full course on English grammar is beyong the scope of this training content, but we at least want to provide some common considerations and resources for your reference.
+
+## 2 Common Grammar Considerations
+
+### 2.1 Subject-Verb Agreement
+The subject of a sentence doesn't agree in number with its verb. For example, "The files is large" should be "The file is large" or "The files are large."
+
+### 2.2 Incorrect Verb Tense
+Using the wrong tense can confuse the reader about when an action took place. For example, "The software will installed tomorrow" should be "The software will be installed tomorrow."
+
+### 2.3 Misplaced Modifiers
+These can make a sentence confusing or unintentionally humorous. For example, "After reviewing the code, the bugs were easy to find" implies that the bugs reviewed the code. A better sentence would be "After reviewing the code, we found the bugs easily."
+
+### 2.4 Run-On Sentences
+These can make your writing hard to follow. For example, "The software is updated it now includes new features" should be "The software is updated. It now includes new features."
+
+### 2.5 Incorrect Use of Commas
+Commas can change the meaning of a sentence if used incorrectly. For example, "Let's eat, John" vs. "Let's eat John."
+
+### 2.6 Incorrect Pronoun Reference
+This can make it unclear what or whom the pronoun is referring to. For example, "When John gave Bob the hard drive, he said it was damaged." Who is "he"? John or Bob?
+
+### 2.7 Using Passive Voice
+While not technically a grammar mistake, using passive voice can make your writing less clear and direct. For example, "The code was written by the developer" could be more directly stated as "The developer wrote the code." Reference [the Be Concise Section](../concise/03.md) to learn more about writing in active voice.
+
+### 2.8 Incorrect Word Usage
+This can occur when words are used incorrectly, often due to confusion between words that sound similar but have different meanings, like "affect" and "effect."
+
+### 2.9 Consistent Verb Tense
+Make sure to stay consistent in verb tense, whether using the past or present especially when writing technical documentation.
+
+### 2.10 Misspelled Words
+This is common and understandable. It happens to everyone. But it can drastically change the meaning or understanding when in critical places.
+
+## 3 Grammar Resources
+
+- Use text editors like [Microsoft Word](https://www.office.com/) or [Google Docs](https://www.google.com/docs/about/) for inline grammar checking.
+- Reference tools like [this Guide to Grammar and Writing](http://guidetogrammar.org/grammar/) for grammar practice.
+- Reference [Purdue Owl](https://owl.purdue.edu/) for technical information about writing formats and styles.
