finish be accurate section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/accurate/02.md
+++ b/courses/accurate/02.md
@@ -1,8 +1,60 @@
 ---
 index: 2
-title: 2. Consistent, Correct Information
+title: 2. Technically Accurate
 author: Emily
 headerDepth: 3
 ---
 
-## Detail Oriented
+## 1 What is Being Technically Accurate?
+Being technically accurate is conveying correct technical information to the user. This is extremely important! This is why the reader is reading your content - they want or need to know this information. You definitely want to get it right.
+
+## 2 How to Be Technically Accurate
+
+### 2.1 Use correct information
+First of all, you need to know the correct information. If you are not confident of the information, take the time to find out - whether through technical investigation, consultation with a collegue, or formal or informal training.
+
+::: danger DO NOT GUESS OR ASSUME
+Do not guess or make assumptions when writing technical documentation. This hurts the user who may receive inaccurate information, and this could hurt your reputation as the author. It is best to take the time to learn what is necessary to write accurate information. If there is no time to do so, ask a boss or colleague for assistance with the task or identify a phased release plan for the content so the delivery can be accurate.
+:::
+
+### 2.2 Be detail oriented
+Being precise and consistent is imperative to being accurate. This requires the writer to be detail oriented, or take the time to review the small things. Without reviewing the details, the author may overlook something small that is inaccurate, making the documentation not precise, or the author may make an update in one place that impacts something else but not update the coordinating content, making the content inconsistent. 
+
+::: info Useful Strategies
+Code Editors and IDEs (Integrated Developement Environments) often have powerful search and replace functionality. Search for key words, phrases, or even grammar that may reveal similar content which needs addressed during a change. This is especially relevant when you are adding to documentation of which you are not the sole author. There may be content that you do not see initially that is relevant to your changes.
+:::
+
+### 2.3 Define technical terms
+Define technical acronyms, terms, and phrases for understanding and accuracy. Not only does this confirm that you know the information, but it gives a consistent definition for the readers to understand the content. For example, many acronyms and words have different meanings depending on the context. If not defined, readers are left to determine that for themselves and may make inaccurate assumptions or not know any meaning for the term.
+
+::: details Examples of terms with multiple meanings
+The following terms mean something to software professionals but may mean something different to others. Most of these are well known words in both contexts, but provide examples of how easy it could be to confuse a reader if they are not aware of the context.
+- API (Application Programming Interface): In software, this refers to a set of rules and protocols for building and interacting with software applications. It's not a general term known outside of tech.
+- Bug: In general usage, a bug is a small insect. In software, a bug refers to an error, flaw, or fault in a program that causes it to produce incorrect or unexpected results.
+- Cloud: In general, a cloud is a mass of condensed water vapor floating in the atmosphere. In tech, the cloud refers to servers that are accessed over the Internet, and the software and databases that run on those servers.
+- Cookie: Outside of tech, a cookie is a baked treat. In the world of web browsing, a cookie is a small piece of data stored on the user's computer by the web browser while browsing a website.
+- Java: Java is an island in Indonesia, but in the tech world, it's a popular programming language.
+- Python: In general, a python is a type of snake. In software, Python is a high-level programming language known for its readability and simplicity.
+- Spam: In everyday language, Spam is a brand of canned cooked pork. In the digital world, spam refers to irrelevant or inappropriate messages sent on the Internet to a large number of recipients.
+- Virus: In biology, a virus is a small infectious agent. In computing, a virus is a type of malicious software that, when executed, replicates itself by modifying other computer programs and inserting its own code.
+:::
+
+::: info Example
+Consider defining the term "data encryption" in software documentation for someone who is interested in data security. How would you do so?
+
+Try concisely and simply stating a definition, then using a simile as useful.
+
+Here is a suggested answer:
+Data encryption is a security method where information is encoded into a format that can't be understood by unauthorized users. It's like turning your data into a secret code that can only be read if you have the key to decode it. This helps protect sensitive information from being accessed by hackers or other unauthorized people. When the data needs to be read, it's decrypted back into its original format. This is often used when sending information over the internet to prevent unauthorized access.
+:::
+
+### 2.4 Provide a glossary
+If applicable, you can provide a glossary of terms, acronyms, or even link to additional documentation written by you or others that helps define concepts or processes such that readers can consume the information understandably and accurately.
+
+## 3 Put it in Practice!
+
+Try defining "API (Application Programming Interface)" for a target audience of software developers. If you are not confident how to do so, spend a minute reading about or researching an API. Include appropriate detail and precision to define the term.
+
+::: details Suggested Answer
+An API is a set of rules and protocols that specifies how software components should interact. It's like a menu in a restaurant: the menu provides a list of dishes you can order, along with a description of each dish. When you specify what menu items you want, the restaurant's kitchen does the work and provides you with some finished dishes. You don't know exactly how the restaurant prepares that food, and you don't really need to. Similarly, an API lists a bunch of operations that a programmer can use, along with a description of what they do. The programmer doesn't necessarily need to know how these operations are implemented.
+:::
